--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -267,7 +267,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_A_SCHOLAR_DENOUNCED_TITLE</zType>
-		<de-DE>Ein bloßgestellter Wissenschaftler</de-DE>
+		<de-DE>Ein bloßgestellter Gelehrte</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_THOUGHTS_WORDS_DEEDS_TITLE</zType>
