--- a/Translations/German/text-project-event-change.xml
+++ b/Translations/German/text-project-event-change.xml
@@ -379,4 +379,8 @@
 		<zType>TEXT_PROJECT_ZOOLOGICAL_SOCIETY_PROJECT_RESEARCH_CLOISTER</zType>
 		<de-DE>Research Cloister</de-DE>
 	</Entry>
+	<Entry>
+		<zType>TEXT_PROJECT_THE_SAND_PITS</zType>
+		<de-DE>Die Sandgrube</de-DE>
+	</Entry>
 </Root>
