--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -84,11 +84,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SCHOLAR_ARCHETYPE</zType>
-		<de-DE>Wissenschaftler~ein Wissenschaftler~Wissenschaftler</de-DE>
+		<de-DE>Gelehrter~ein Gelehrter~Gelehrten</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_SCHOLAR_ARCHETYPE_F</zType>
-		<de-DE>Wissenschaftlerin~eine Wissenschaftlerin~Wissenschaftlerinnen</de-DE>
+		<de-DE>Gelehrte~eine Gelehrte~Gelehrtern</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_DIPLOMAT_ARCHETYPE</zType>
